--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,5 @@
 <resources>
 
-    <string name="app_name">CryptoLib</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="menu_settings">Settings</string>
-    <string name="title_activity_crypto_test">Crypto Test</string>
+    <string name="app_name">Orwell</string>
 
 </resources>
